--- a/app/globals.css
+++ b/app/globals.css
@@ -54,7 +54,9 @@
 }
 
 /* ==== clerk class override ===== */
-
+.cl-providerIcon__github {
+  filter: invert(1);
+}
 .cl-userButtonPopoverActionButtonIcon {
   color: white;
 }
@@ -77,6 +79,7 @@
 .cl-userButtonPopoverActionButton {
   color: white;
 }
+
 
 /* =============================== */
 
